index.css
/* ... */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    font-family: var(--main-font);
    color: var(--text-color);
}

.li--hasMenu {
    z-index: 1;
    position: relative;
    cursor: pointer;
    transition: all .5s ease;
}

.li--leftNav:hover,
.li--leftNav:focus {
    opacity: 100%;
}

.a--ul--leftNav:hover::after,
.a--ul--leftNav:focus::after {
    content: "";
    position: absolute;
    border: 1px solid var(--text-color);
    left: 0;
    bottom: 35%;
}

.li--hidden--main {
    position: absolute;
    top: 3rem;
    background-color: var(--main-font);
}

.ul--hidden {
    position: relative;
    display: flex;
    flex-direction: column;
    padding-left: 1.5rem;
    justify-content: center;
    gap: .5rem;
    background-color: var(--text-color);
    width: var(--hidden-menu-width);
    height: var(--hidden-menu-height);
    -webkit-box-shadow: 0px 9px 20px 5px rgba(80, 80, 80, 0.46);
    box-shadow: 0px 9px 20px 5px rgba(80, 80, 80, 0.46);
    border-radius: .3rem;
    clip-path: circle(0% at 5% 5%);
    transition: all .5s ease;
}

.a--hidden {
    display: inline-block;
    font-size: .9rem;
    font-family: 'Ubuntu', sans-serif;
    color: var(--background-body-blue);
}

.a--footer,
.a--ul--leftNav,
.a--rightNav {
    color: var(--text-color);
}

.li--hidden--main:nth-child(4) {
    left: 6.5rem;
}

.li--hidden--main:nth-child(6) {
    left: 14rem;
}

.ul--hidden {
    list-style: none;
}

.li--hasMenu {
    height: 100%;
    display: flex;
    align-items: center;
}


.li--productMenu>.a--ul--leftNav:hover::after,
.li--productMenu>.a--ul--leftNav:focus::after {
    width: 5.3ch;
}


.li--companyMenu>.a--ul--leftNav:hover::after,
.li--companyMenu>.a--ul--leftNav:focus::after {
    width: 6.3ch;
}

.li--connectMenu>.a--ul--leftNav:hover::after,
.li--connectMenu>.a--ul--leftNav:focus::after {
    width: 5.7ch;
}

.a {
    opacity: 75%;
    display: inline-block;
    font-family: var(--main-font);
    text-decoration: none;
    cursor: pointer;
}

.a:hover,
.a:focus {
    opacity: 100%;
}

.a--ul--leftNav {
    height: 100%;
    display: flex;
    align-items: center;
    opacity: 100%;
}

.h1 {
    font-size: var(--h1-font-size);
}

.a--rightNav,
.ul--leftNav,
.a--hero {
    font-weight: 600;
}

.section--intro {
    background-image: var(--background-intro-color);
    border-radius: 0px 0px 0px 6.25rem;
    overflow: hidden;
}

.block--wrapperIntro {
    height: 100%;
    width: 100%;
    background-image: url(./images/bg-pattern-intro-desktop.svg);
    background-position: 25% 52%;
    padding-bottom: 9.25rem;
}

.heading--intro {
    display: flex;
    gap: 4rem;
    padding-left: var(--page-padding-left);
    padding-top: 3.5rem;
    padding-bottom: 8rem;
    padding-right: var(--page-padding-right);
    align-items: center;
}

.section--hero {
    width: 100%;
    display: flex;
    align-items: center;
    flex-direction: column;
}

.block--hero {
    margin-top: 2rem;
    display: flex;
    gap: 1rem;
}

.h1--hero {
    font-size: 4rem;
    letter-spacing: -0.12rem;
    line-height: 98px;
}

.ul {
    list-style: none;
}

.ul--leftNav,
.ul--rightNav {
    display: flex;
}

.svg--arrow {
    transition: all .3s ease;
    margin-left: .3rem;
}

.button--mobileNav {
    border: none;
    background-color: transparent;
    position: absolute;
    top: 4rem;
    right: 2rem;
    display: none;
}

.nav {
    position: relative;
    display: flex;
    flex: 1;
    justify-content: space-between;
}

.block--sectionProductDescLeft {
    max-width: 35vw;
}


.a.whiteFilled {
    background-color: var(--text-color);
    color: var(--primary-red);
}

.a.whiteFilled:hover,
.a.whiteFilled:focus {
    background-color: var(--button-sign-up-hover);
    color: var(--text-color);
}

.whiteFilled,
.whiteOutline {
    opacity: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 2rem;
    width: var(--anchor-button-width);
    height: var(--anchor-button-height);
    transition: all .5s ease;
}

.whiteOutline {
    border: 1px solid var(--text-color);
}

.whiteOutline:hover,
.whiteOutline:focus {
    color: var(--button-sign-up-hover);
    background-color: var(--text-color);
}

.p {
    font-weight: 400;
    opacity: 75%;
}

.p--hero {
    font-size: 1.25rem;
    margin-bottom: 1rem;
}

.ul--leftNav,
.ul--rightNav {
    align-items: center;
}

.ul--leftNav {
    position: relative;
    gap: 2rem;
}

.ul--rightNav {
    gap: 2rem;
}


.section--productDesc {
    height: 63rem;
    overflow-x: hidden;
    padding-left: var(--page-padding-left);
    padding-top: 10rem;
    color: var(--primary-dark-blue);
    display: flex;
    position: relative;
}

.header--productDesc {
    padding-right: 20rem;
    width: 100vw;
}

.img--productDesc {
    position: absolute;
    right: clamp(-280px, -19vw, -400px);
    top: 4.5rem;
}

.article {
    max-width: var(--article-width);
}

.h1--infrastructure {
    font-size: var(--h1-infrastructure-font-size);
    letter-spacing: var(--letter-spacing-headers);
}

.h1--productDesc {
    letter-spacing: var(--letter-spacing-headers);
    font-size: var(--h1-infrastructure-font-size);
    text-align: center;
    margin-bottom: 6rem;
}

.article--technical:first-child>.p--technical,
.article--technicalCont:first-child>.p--technicalCont {
    margin-bottom: 4.5rem;
}

.article>.p {
    font-size: var(--body-copy);
    letter-spacing: var(--body-copy-letter-spacing);
    line-height: 175%;
}

.article--technical>.p {
    color: var(--body-copy-color);
}

.header-technical,
.heading--technicalCont {
    font-size: var(--article-header-font-size);
    margin-bottom: 1.5rem;
}

.section--infrastructure {
    background-image: var(--bg-body);
    border-radius: 0 6.25rem;
    height: 25rem;
}
/* ... */

